# angentic-sytems-lab

./: Dockerfile  Makefile  STATUS.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
data/: sample.txt
docs/: day1-proof.md  day2-proof.md  day3-proof.md  day4-proof.md  day5-proof.md  day6-proof.md  day7-proof.md
src/app/: main.py  schemas.py
src/core/: audit.py  audit_models.py  permissions.py
src/graphs/basic_agent/: graph.py  nodes.py  run.py  state.py
src/mcp/: models.py  router.py
src/middleware/: logging.py  spans.py  trace_id.py
src/tools/: read_file.py  registry.py
tests/: test_basic_agent_graph_determinism.py  test_day7_no_bypass.py  test_mcp_read_file.py
