[project]
name = "agentic-systems-lab"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.128.0",
    "langgraph>=1.0.6",
    "pydantic>=2.12.5",
    "uvicorn>=0.40.0",
]
[tool.pytest.ini_options]
pythonpath = ["src"]
